Downgrade to java 21 to be codex friendly, removed use of java 22 feature